--- a/_site.yml
+++ b/_site.yml
@@ -13,7 +13,9 @@ navbar:
     - text: "Take-home Exercise"
       menu:
       - text: "Take-home Exercise 1"
-        href: TH_Ex01.html
+        href: takehome1.html
+      - text: "Take-home Exercise 2"
+        href: takehome2.html
     - text: "DataViz Makeover"
       menu:
       - text: "DataViz 1"
