--- a/_site.yml
+++ b/_site.yml
@@ -19,7 +19,7 @@ navbar:
     - text: "DataViz Makeover"
       menu:
       - text: "DataViz 1"
-        href: assigment/dataviz1/dataviz1.html
+        href: "assigment/dataviz1/Dataviz1.html"
       - text: "DataViz 2"
         href: DataViz2.html
 output: distill::distill_article
